openshift/sonarqube-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: sonarqube
  name: sonarqube
spec:
  port:
    targetPort: 9000-tcp
  to:
    kind: Service
    name: sonarqube
    weight: 100
  wildcardPolicy: None
